--- a/import/pom.xml
+++ b/import/pom.xml
@@ -31,6 +31,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>one.util</groupId>
+            <artifactId>streamex</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.j2html</groupId>
+            <artifactId>j2html</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>ru.javaops</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
