--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>import</module>
         <module>common</module>
         <module>test</module>
+        <module>mail-api</module>
+        <module>webapp</module>
+        <module>mail-service</module>
         <!--
                 <module>webapp</module>
                 <module>mail-ru.javaops.ru.javaops.masterjava.service</module>
