--- a/test/pom.xml
+++ b/test/pom.xml
@@ -11,7 +11,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>ru.javaops</groupId>
+    <name>Test</name>
     <artifactId>test</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
