--- a/mail-service/pom.xml
+++ b/mail-service/pom.xml
@@ -17,4 +17,15 @@
     <packaging>war</packaging>
 
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
