xml import servlet

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -23,9 +23,19 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>ru.javaops</groupId>
+            <artifactId>export</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.8.RELEASE</version>
         </dependency>
     </dependencies>
 
