--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <name>Master Java</name>
     <url>https://github.com/JavaOPs/masterjava</url>
     <modules>
-        <module>import</module>
+        <module>upload</module>
         <module>common</module>
         <!--
                 <module>webapp</module>
