--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,24 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.javaops</groupId>
-    <artifactId>masterjava</artifactId>
+    <artifactId>web</artifactId>
     <packaging>pom</packaging>
-
     <version>1.0-SNAPSHOT</version>
-
-    <name>Masterjava Root</name>
-    <url>https://github.com/JavaOPs/masterjava</url>
+    <name>Web</name>
 
     <modules>
-    <module>common</module>
-    <!--
-            <module>webapp</module>
-            <module>mail-service</module>
-            <module>mail-api</module>
-            <module>test</module>
-    -->
-
-    <module>web</module>
-    <module>services</module>
+        <module>upload</module>
+        <module>webapp</module>
     </modules>
 </project>
