--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,14 @@
     <url>https://github.com/JavaOPs/masterjava</url>
 
     <modules>
-    <module>common</module>
-    <!--
-            <module>webapp</module>
-            <module>mail-service</module>
-            <module>mail-api</module>
-            <module>test</module>
-    -->
+        <module>common</module>
+        <!--
+                <module>webapp</module>
+                <module>mail-service</module>
+                <module>mail-api</module>-->
 
-    <module>web</module>
-    <module>services</module>
+        <module>test</module>
+        <module>web</module>
+        <module>services</module>
     </modules>
 </project>
