--- a/web/import/pom.xml
+++ b/web/import/pom.xml
@@ -11,10 +11,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>upload</artifactId>
+    <artifactId>import</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>Upload</name>
+    <name>Import</name>
 
     <build>
         <finalName>import</finalName>
