--- a/persist/pom.xml
+++ b/persist/pom.xml
@@ -42,5 +42,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.rkmk</groupId>
+            <artifactId>jdbi-folder</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 </project>
