--- a/persist/pom.xml
+++ b/persist/pom.xml
@@ -46,6 +46,12 @@
             <groupId>com.github.rkmk</groupId>
             <artifactId>jdbi-folder</artifactId>
             <version>1.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jdbi</groupId>
+                    <artifactId>jdbi</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
