--- a/persist/src/main/resources/persist.conf
+++ b/persist/src/main/resources/persist.conf
@@ -1,7 +1,5 @@
 db {
   url = "jdbc:postgresql://localhost:5432/masterjava"
-  user = user
-  password = password
+  user = postgres
+  password = root
 }
-
-include required(file("/apps/masterjava/config/persist.conf"))
